--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "body-parser": "~1.18.2",
+    "connect-timeout": "^1.9.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "easy-renamer": "^0.3.1",
@@ -15,6 +16,7 @@
     "morgan": "~1.9.0",
     "multer": "^1.3.0",
     "quick-gist": "^1.4.0",
+    "request": "^2.83.0",
     "serve-favicon": "~2.4.5",
     "short-url": "0.0.1",
     "shorturl": "0.0.3",
